welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: Missing closing brace `}' assumed here
while (!sortieTrouvee()) {
^Poucet:13: error: '(' expected but 'do' found.
	else if 	do { var Nbbiscuitpasse:Int=0
                        ^Poucet:21: error: ';' expected but 'else' found.
	else if (Nbbiscuitpasse<=2) {
        ^