welcome.lessons.welcome.loopdowhile.Poucet.scala.code

while (!sortieTrouvee()) {
	if (croisement()) {
		if (Nbbiscuitpasse>=3) {
			gauche();
		}
		else if (Nbbiscuitpasse<=2) {
			droite();
		}
	
	}
	else if 	do { var Nbbiscuitpasse:Int=0
	avance();
	if (estSurBiscuit()) {
		Nbbiscuitpasse=Nbbiscuitpasse+1
		};
} while (!croisement)
if (Nbbiscuitpasse>=3) {
	gauche();
	else if (Nbbiscuitpasse<=2) {
		droite();
	}
}

